tests/type_errors/static_method_dot_call_error.cx
public:

struct Counter {
    int count;
};

Counter Counter::create() {
    Counter result = { .count = 0 };
    return result;
}

int main() {
    Counter c = c.create();
    return 0;
}
